# r4c_weeding

./: CMakeLists.txt  package.xml
launch/: weeding.launch.py
src/: detection_blob.cpp  detection_track.cpp
weeding/: detect_blob.py
